@@ -1,2 +1,2 @@
 @echo off
-java -jar "%~dp0dist\ui.jar" %*
+java --module-path "%~dp0javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml -Djava.library.path="%~dp0javafx-sdk\bin" -jar "%~dp0dist\ui.jar" %*
